# fau-flask-server

./: Dockerfile  README.md  app.py  docker-compose.yml  install_dep.py  pyproject.toml
